syntax = "proto3";

service GeoAlt {
  rpc Login(LoginReq) returns (LoginResp);
  rpc Register(RegisterReq) returns (RegisterResp);
  rpc CreateAlert(CreateAlertReq) returns (CreateAlertResp);
  rpc GetAlert(GetAlertReq) returns (GetAlertResp);
}

message RegisterReq {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
  string address = 5;
}

message RegisterResp {
  string token = 1;
}

message LoginReq {
  string email = 1;
  string password = 2;
}

message LoginResp {
  string token = 1;
}

message CreateAlertReq {
  double lat = 1;
  double lng = 2;
  string message = 3;
  bool ephemeral = 4;
  uint32 resolution = 5;
  int64 delay = 6;
}

message CreateAlertResp {
  bool ok = 1;
}

message GetAlertReq {
  double lat = 1;
  double lng = 2;
}

message GetAlertResp {
  repeated Alert alerts = 1;
}

message Alert {
  Coord center = 1;
  repeated Coord borders = 2;
  Cell cell = 3;
  string message = 4;
  int64 timestamp = 5;
  int64 read_at = 6;
  int64 delay = 7;
}

message Coord {
  double lat = 2;
  double lng = 3;
}

message Cell {
  // Smallest cell resolution (15)
  uint64 base_cell = 1;
  // Cell id used for indexing 
  uint64 index_cell = 2;
  // Cell id with the resolution
  uint64 real_cell = 3;
  uint32 resolution = 4;
}
